must log in to host a stay
logging in allows you to see the link to host a stay page

--- a/app/components/nav-bar.hbs
+++ b/app/components/nav-bar.hbs
@@ -6,7 +6,7 @@
         <LinkTo @route="search" class="menu-search">
             Search
         </LinkTo>
-        <LinkTo @route="host" class="menu-host">
+        <LinkTo @route="login" class="menu-host">
             Host A Stay
         </LinkTo>
         <LinkTo @route="login" class="menu-login">
