--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -20,7 +20,36 @@ body {
   font-family: 'Arial Rounded MT', Arial, Helvetica, sans-serif;
   background: #f3f3f3;
 }
+#hostAStay {
+  text-align: center;
+  padding: 15px;
+}
+#hostButton {
+  padding: 10px;
+}
+#clearDiv {
+  padding: 25px;
+}
+#newProperties {
+  padding: 20px;
+}
+#showNew {
+  padding: 15px;
+  margin: 20px;
+}
 
+#propertiesDiv {
+  padding: 30px;
+}
+#propertyTitle {
+  padding: 35px;
+}
+ul{
+  list-style-type: none;
+  margin: 0;
+  
+  padding: 0;
+}
 .tutorialBody {
   max-width: 1024px;
   text-align: center;
