--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,4 +1,3 @@
-
 <div oncontextmenu="return false">
 <br><br><br><br><br>
 		<div class="title">
@@ -13,11 +12,17 @@
 				<input type="button" onclick="check(this.form)" value="Login"/>
 			<p id ="success" style="visibility: hidden;">You are now logged in!</p>
 			<p id ="fail" style="visibility: hidden;">Login failed, please try again.</p>
+			
+			<div id="linkToHost" style="visibility: hidden;">		
+ 		<LinkTo @route="host" class="menu-login">
+            Click me to Host A Stay!
+        </LinkTo>
+			</div>
 		</div>
 	
 
-
     </form>
+		
 <script language="javascript">
 	var userAccounts = [{
 
@@ -76,10 +81,11 @@ function check(form)
 	(form.userid.value == userAccounts[6].username && form.pswrd.value == userAccounts[6].password)|| 
 	(form.userid.value == userAccounts[7].username && form.pswrd.value == userAccounts[7].password)|| 
 	(form.userid.value == userAccounts[8].username && form.pswrd.value == userAccounts[8].password)|| 
-	(form.userid.value == userAccounts[9].username && form.pswrd.value == userAccounts[9].password) ||
+	(form.userid.value == userAccounts[9].username && form.pswrd.value == userAccounts[9].password))
   { 
 	  	document.getElementById("success").style.visibility='visible';
 		document.getElementById("fail").style.visibility='hidden';
+		document.getElementById("linkToHost").style.visibility="visible";
 		break;
   }
  else
