--- a/app/components/host-stay.hbs
+++ b/app/components/host-stay.hbs
@@ -59,9 +59,25 @@
     </div>
     <script language="javascript">
 
+          
         let newProperties = new Array();
         document.getElementById("hostButton").onclick = hostStay_onclick;
 
+        function clearTextBoxes() {
+            document.getElementById("title").value ="";
+            document.getElementById("owner").value="";
+            document.getElementById("city").value='';
+            document.getElementById("state").value='';
+            document.getElementById("country").value='';
+            document.getElementById("kitchen").value='';
+            document.getElementById("property").value='';
+            document.getElementById("image").valuee='';
+            document.getElementById("bedrooms").value='';
+            document.getElementById("bathrooms").value='';
+            document.getElementById("wifi").value='';
+            document.getElementById("price").value='';
+            document.getElementById("description").value='';
+        }
 
 
         function propertyClass(title, owner, city, state, country, kitchen, property, image, bedrooms, bathrooms, wifi, price, description) {
@@ -113,6 +129,8 @@
                 }
             }
            // console.log(localStorage);
+           alert("Congrats! Property has been added to the search page.");
+           clearTextBoxes();
         }
 
     </script>
